[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cnn-methods"
version = "1.0.0"
dependencies = [
    "sphinx==8.1.3",
    "sphinx_rtd_theme==3.0.2",
    "ipython==8.30.0",
    "triton",
    "torch",
    "torchvision",
    "pandas",
    "graphviz",
    "ultralytics", 
    "matplotlib",
    "jupyterlab",
    "gdown"
]
requires-python = ">=3.8"
authors = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"}
]

maintainers = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10"
]