[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cnn-methods"
version = "1.2.0"
description = "Deep learning project for object classification, detection and classification using YOLO and SAM"
readme = "README.md"
dependencies = [
    "sphinx==8.1.3",
    "sphinx_rtd_theme==3.0.2",
    "triton; sys_platform != 'win32'",
    "torch; sys_platform != 'win32'",
    "torchvision; sys_platform != 'win32'",
    "pandas",
    "graphviz",
    "ultralytics", 
    "matplotlib",
    "gdown"
]
requires-python = ">=3.8"
authors = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"}
]

maintainers = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10"
]